src/graph/snapshots/_gammaloop__graph__lmb__test__lmb_for_dummy@case_1.snap
---
source: src/graph/lmb.rs
expression: "g.dot_lmb(&g.full_filter(), &g.loop_momentum_basis)"
---
digraph {
  node	 [shape=circle,height=0.1,label=""];
  overlap = "scale";
  layout = "neato";
  start=2;
  0	 [label=""];
  1	 [label=""];
  ext0	 [style=invis];
  ext0	-> 0:0:s	 [id=0 color="blue" label="Q(0)"];
  ext1	 [style=invis];
  ext1	-> 0:1:s	 [id=1 color="blue" label="Q(1)"];
  ext2	 [style=invis];
  ext2	-> 1:2:s	 [id=2 color="blue" label="0"];
  0:3:s	-> 1:4:s	 [id=3  color="red:blue;0.5" label="0"];
}
